# memphlus

./: .gitignore  Cargo.toml  memphlus.trace
assets/shaders/: palette_remap.fsh
res/: README.md  map.tiled-project  tileset.ase
res/map/: map.tmx  objecttypes.xml  tileset.tsx
res/map/templates/: camera_view.tx  checkpoint.tx  collider_rect.tx  interaction_platformer.tx  out_of_bounds.tx  text.tx  trigger.tx  zone_deadly.tx  zone_platformer.tx
scripts/: compile-assets.sh
src/: assets.rs  common.rs  input.rs  interpolation.rs  main.rs  meshes.rs  physics.rs  post_process.rs  resources.rs  state.rs  tiled.rs  transform.rs  tween.rs
src/entities/: camera.rs  checkpoint.rs  colliders.rs  dead.rs  interpolation.rs  mod.rs  physics.rs  player.rs  text.rs  trigger.rs  zones.rs
src/map/: collision.rs  entities.rs  meshes.rs  mod.rs  rendering.rs  tiles.rs
src/states/: game.rs  mod.rs
