[package]
name = "memphlus"
version = "0.1.0"
edition = "2021"

[dependencies]

# Common things
anyhow = "1.0.51"
arrayvec = "0.7.2"
bitflags = "1.3.2"

# Game stuff
tetra = { version = "0.6.7", default_features = false, features = ["texture_png", "font_ttf", "audio", "audio_flac"] }
hecs = "0.7.1"
rapier2d = "0.11.1"
vek = { version = "0.13.1" }
nalgebra = { version = "0.29.0" }

# Data formats
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
